--- a/weak_instrument.ipynb
+++ b/weak_instrument.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
     "Z <- rnorm(n=N, mean = 0, sd =sigma_Z)  \n",
     "    \n",
     "# Generate Treatment\n",
-    "sigma_D = sqrt((F+N-2)*sigma_Z^2/F -sigma_Z^2) # Specify Va\n",
+    "sigma_D = sqrt((N-2)*sigma_Z^2/F) # Specify Variance of v\n",
     "v <- rnorm(n=N, mean = 0, sd =sigma_D)\n",
     "D <- Z + v\n",
     "\n",
@@ -171,8 +171,8 @@
     "print(paste0(\"Empirical F-statistic: \",round(F_emp, digits =2)))\n",
     "\n",
     "# Population F-statistic\n",
-    "Ftrue = (N-2)*(sigma_Z^2/(sigma_D^2+sigma_Z^2))/(1-(sigma_Z^2/(sigma_D^2+sigma_Z^2)))\n",
-    "print(paste0(\"True F-statistic: \",round(Ftrue, digits =2)))"
+    "F_true = (N-2)*(sigma_Z^2/(sigma_D^2+sigma_Z^2))/(1-(sigma_Z^2/(sigma_D^2+sigma_Z^2)))\n",
+    "print(paste0(\"True F-statistic: \",round(F_true, digits =2)))"
    ]
   },
   {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -196,18 +196,18 @@
        "\n",
        "Residuals:\n",
        "    Min      1Q  Median      3Q     Max \n",
-       "-1.4388 -0.6192  0.1212  0.3911  2.2472 \n",
+       "-2.4074 -0.7638 -0.2856  0.6918  2.8854 \n",
        "\n",
        "Coefficients:\n",
        "            Estimate Std. Error t value Pr(>|t|)    \n",
-       "(Intercept) -0.01602    0.11533  -0.139     0.89    \n",
-       "D            0.69624    0.02294  30.353   <2e-16 ***\n",
+       "(Intercept)   0.1077     0.1715   0.628    0.533    \n",
+       "D             0.7183     0.1659   4.329 7.56e-05 ***\n",
        "---\n",
        "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
        "\n",
-       "Residual standard error: 0.8085 on 48 degrees of freedom\n",
-       "Multiple R-squared:  0.9505,\tAdjusted R-squared:  0.9494 \n",
-       "F-statistic: 921.3 on 1 and 48 DF,  p-value: < 2.2e-16\n"
+       "Residual standard error: 1.212 on 48 degrees of freedom\n",
+       "Multiple R-squared:  0.2808,\tAdjusted R-squared:  0.2658 \n",
+       "F-statistic: 18.74 on 1 and 48 DF,  p-value: 7.565e-05\n"
       ]
      },
      "metadata": {},
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -242,18 +242,18 @@
        "\n",
        "Residuals:\n",
        "    Min      1Q  Median      3Q     Max \n",
-       "-2.1910 -0.7282 -0.2583  0.7127  2.7876 \n",
+       "-2.3444 -0.8475 -0.2522  0.7339  3.0228 \n",
        "\n",
        "Coefficients:\n",
-       "            Estimate Std. Error t value Pr(>|t|)  \n",
-       "(Intercept)  0.09104    0.21438   0.425   0.6730  \n",
-       "D            0.53436    0.21019   2.542   0.0143 *\n",
+       "            Estimate Std. Error t value Pr(>|t|)   \n",
+       "(Intercept)   0.1050     0.1738   0.604  0.54865   \n",
+       "D             0.5296     0.1721   3.077  0.00345 **\n",
        "---\n",
        "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
        "\n",
-       "Residual standard error: 1.154 on 48 degrees of freedom\n",
-       "Multiple R-Squared: 0.8991,\tAdjusted R-squared: 0.897 \n",
-       "Wald test: 6.463 on 1 and 48 DF,  p-value: 0.0143 \n"
+       "Residual standard error: 1.229 on 48 degrees of freedom\n",
+       "Multiple R-Squared: 0.2614,\tAdjusted R-squared: 0.2461 \n",
+       "Wald test:  9.47 on 1 and 48 DF,  p-value: 0.003446 \n"
       ]
      },
      "metadata": {},
@@ -278,12 +278,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Up to now we generated only one random draw of the DGP and estimated the parameters of interst in this sample. But are the biases that we found systematic or did they occur just by chance? To answer this, we take many independent random draws of the DGP and estimate the parameters of interest in each sample. Afterwards, we can compare the distributions of the parameters, which gives us information about the finite sample properties of the estimators."
+    "Up to now, we generated only one random draw of the DGP and estimated the parameters of interst in this sample. But are the biases that we found systematic or did they occur just by chance? To answer this, we take many independent random draws of the DGP and estimate the parameters of interest in each sample. Afterwards, we can compare the distributions of the parameters, which gives us information about the finite sample properties of the estimators."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
